# Auto-Paper-Research

./: README.md  pyproject.toml
configs/: arxiv_topics.yaml  prompts.yaml  topics.yaml
src/research_pipeline/: cli.py  config.py  prompts.py
src/research_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/research_pipeline/analyzer/: __init__.py  library.py  pdf_parser.py  pipeline.py  report_writer.py  retriever.py  scan.py  single_summary_store.py  summarizer.py  title_resolver.py
src/research_pipeline/arxiv/: __init__.py  fetcher.py
src/research_pipeline/models/: schema.py
tests/: test_markdown_chunking.py  test_paper_id.py  test_report_writer.py
